pkg/ibmvpc/examples/out/explain_out/VsiToVsi3_all_vpcs_explain_debug.txt
Connectivity explanation between vsi3a-ky and 10.240.10.4 (vsi1-ky[10.240.10.4]) within test-vpc1-ky
====================================================================================================

The following connection exists between vsi3a-ky[10.240.30.5] and vsi1-ky[10.240.10.4]: All Connections

Path:
	vsi3a-ky[10.240.30.5] -> security group sg3-ky -> subnet3-ky -> network ACL acl3-ky -> 
	network ACL acl1-ky -> subnet1-ky -> security group sg1-ky -> vsi1-ky[10.240.10.4]


Details:
~~~~~~~~
Egress:
security group sg3-ky allows connection with the following allow rules
	index: 0, direction: outbound, protocol: all, remoteCidr: 0.0.0.0/0, localCidr: 0.0.0.0/0
	index: 2, direction: outbound,  conns: protocol: tcp,  dstPorts: 1-65535, remoteCidr: 0.0.0.0/0, localCidr: 0.0.0.0/0
	index: 3, direction: outbound,  conns: protocol: tcp,  dstPorts: 100-200, remoteCidr: 0.0.0.0/0, localCidr: 0.0.0.0/0
network ACL acl3-ky allows connection with the following allow rules
	index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

Ingress:
network ACL acl1-ky allows connection with the following allow rules
	index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
security group sg1-ky allows connection with the following allow rules
	index: 4, direction: inbound, protocol: all, remoteCidr: 10.240.30.5/32,10.240.30.6/32, localCidr: 0.0.0.0/0

------------------------------------------------------------------------------------------------------------------------
